# projet_interpreteur_de_code

./: CMakeLists.txt
include/expressions/: expr.h  expr_token.h  operator.h
include/file_io/: file.h
include/program/: lexer.h  lexical.h  parser.h  program.h  run.h
include/structures/: list_double-ended.h  prog_token_list.h  queue.h  stack.h
output/: .gitkeep  code_ex.mmd
src/: main.c
src/expressions/: expr.c  expr_token.c  operator.c
src/file_io/: file.c
src/program/: lexer.c  lexical.c  parser.c  program.c  run.c
src/structures/: list_double-ended.c  prog_token_list.c  queue.c  stack.c
